# onnx_ostrack

./: CMakeLists.txt  README.md  infer.py  main-trt.cpp  main.cpp  onnx2trt.sh  output.avi
